--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,6 @@
 
 		/* Modules */
 		"module": "ESNext" /* Specify what module code is generated. */,
-		"rootDir": "./server/" /* Specify the root folder within your source files. */,
 		"moduleResolution": "bundler" /* Specify how TypeScript looks up a file from a given module specifier. */,
 		"baseUrl": "." /* Specify the base directory to resolve non-relative module names. */,
 		"paths": {
@@ -15,11 +14,12 @@
 		} /* Specify a set of entries that re-map imports to additional lookup locations. */,
 		"rootDirs": [
 			"./server/",
+			"./types/",
 			"./test/"
 		] /* Allow multiple folders to be treated as one when resolving modules. */,
 		"typeRoots": [
 			"./node_modules/@types/",
-			"./server/types/"
+			"./types/"
 		] /* Specify multiple folders that act like './node_modules/@types'. */,
 		"allowImportingTsExtensions": true /* Allow imports to include TypeScript file extensions. Requires '--moduleResolution bundler' and either '--noEmit' or '--emitDeclarationOnly' to be set. */,
 
