--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,11 @@ lerna-debug.log*
 pnpm-lock.yaml
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+# Bun cache directory
+.bun/
 
+# pnpm store (optional, if you use local store instead of global)
+.pnpm-store/
 # Runtime data
 pids
 *.pid
