--- a/package.json
+++ b/package.json
@@ -21,12 +21,21 @@
     "test": "bun test test/index.ts",
     "dev": "bun run --hot server/server.ts"
   },
-  "dependencies": {
+  "devDependencies": {
     "@types/bun": "^1.2.13",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
+    "@types/express-mongo-sanitize": "^2.1.0",
+    "@types/express-rate-limit": "^7.5.0",
+    "@types/express-validator": "^3.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/mongodb": "^4.0.7",
+    "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
+    "@types/node": "^22.15.21"
+  },
+  "dependencies": {
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -35,7 +44,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "express-mongo-sanitize": "^2.1.0",
+    "express-rate-limit": "^6.9.0",
+    "express-validator": "^7.0.0"
   },
   "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
 }
