--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,46 +1,17 @@
 {
-	"$schema": "https://json.schemastore.org/tsconfig",
-	"compilerOptions": {
-		"target": "ESNext" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
-		"jsx": "react-jsx" /* Specify what JSX code is generated. */,
-		"moduleDetection": "force" /* Control what method is used to detect module-format JS files. */,
-
-		/* Modules */
-		"module": "ESNext" /* Specify what module code is generated. */,
-		"moduleResolution": "bundler" /* Specify how TypeScript looks up a file from a given module specifier. */,
-		"baseUrl": "." /* Specify the base directory to resolve non-relative module names. */,
-		"paths": {
-			"@/*": ["./*"]
-		} /* Specify a set of entries that re-map imports to additional lookup locations. */,
-		"rootDirs": [
-			"./server/",
-			"./types/",
-			"./test/"
-		] /* Allow multiple folders to be treated as one when resolving modules. */,
-		"typeRoots": [
-			"./node_modules/@types/",
-			"./types/"
-		] /* Specify multiple folders that act like './node_modules/@types'. */,
-		"allowImportingTsExtensions": true /* Allow imports to include TypeScript file extensions. Requires '--moduleResolution bundler' and either '--noEmit' or '--emitDeclarationOnly' to be set. */,
-
-		/* JavaScript Support */
-		"allowJs": true /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */,
-		"checkJs": true /* Enable error reporting in type-checked JavaScript files. */,
-
-		/* Emit */
-		"sourceMap": true /* Create source map files for emitted JavaScript files. */,
-		"noEmit": false /* Disable emitting files from a compilation. */,
-		"outDir": "./dist" /* Specify an output folder for all emitted files. */,
-		"esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
-		"forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
-
-		/* Type Checking */
-		"strict": true /* Enable all strict type-checking options. */,
-		"noUncheckedIndexedAccess": true /* Add 'undefined' to a type when accessed using an index. */,
-		/* Completeness */
-		"include": ["./server/", "./test/", "./types/"],
-		"exclude": ["./node_modules/", "./dist"],
-		"skipDefaultLibCheck": true /* Skip type checking .d.ts files that are included with TypeScript. */,
-		"skipLibCheck": true /* Skip type checking all .d.ts files. */
-	}
+    "compilerOptions": {
+        "target": "esnext",
+        "moduleResolution": "node",
+        "strict": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true,
+        "baseUrl": ".", // Required for paths to work
+        "paths": {
+            "@/*": ["server/*"] // Alias @ points to the entry file server
+        },
+        "outDir": "./dist" // Output directory for compiled files
+    },
+    "exclude": ["node_modules"]
 }
+
