--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^22.15.21"
+    "@types/node": "^22.15.21",
+    "@types/pg": "^8.15.2"
   },
   "dependencies": {
     "cookie-parser": "^1.4.7",
@@ -44,6 +45,7 @@
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.0",
     "morgan": "^1.10.0",
+    "pg": "^8.16.0",
     "xss-clean": "^0.1.4"
   },
   "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
