✨ feat(scripts): Add PostgreSQL support
✨ Added:
- scripts/create-model.ts
- scripts/seed.ts

🔄 Modified:
- package.json

--- a/package.json
+++ b/package.json
@@ -15,35 +15,42 @@
   "main": "server/index.js",
   "scripts": {
     "test": "bun test test/index.ts",
-    "dev": "bun run --hot server/server.ts"
+    "dev": "bun run --hot server/server.ts",
+    "prisma:init": "prisma init",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate:dev": "prisma migrate dev",
+    "prisma:migrate:deploy": "prisma migrate deploy",
+    "prisma:studio": "prisma studio",
+    "model:create": "bun run scripts/create-model.ts",
+    "model:make-migration": "prisma migrate dev",
+    "db:seed": "bun run scripts/seed.ts",
+    "db:reset": "prisma migrate reset --force"
   },
   "devDependencies": {
     "@types/bun": "^1.2.13",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
-    "@types/express-mongo-sanitize": "^2.1.0",
     "@types/express-rate-limit": "^6.0.2",
     "@types/express-validator": "^3.0.2",
     "@types/jsonwebtoken": "^9.0.7",
-    "@types/mongodb": "^4.0.7",
-    "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.15.21",
-    "@types/pg": "^8.15.2"
+    "@types/pg": "^8.15.2",
+    "prisma": "^5.10.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "^6.9.0",
     "express-validator": "^7.0.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.16.0",
-    "mongoose": "^8.15.0",
     "morgan": "^1.10.0",
     "pg": "^8.16.0",
     "xss-clean": "^0.1.4"
